objects/Consumable_Direct_DB__c.object
<CustomObject>
    <label>Consumable Direct DB</label>
    <nameField>
        <label>Consumable Direct DB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumable Direct DB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustNo__c</fullName>
        <label>CustNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address_2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostCode__c</fullName>
        <label>PostCode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address_1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <label>Address_3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <label>Contact_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustBaseNo__c</fullName>
        <label>CustBaseNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <label>MiddleName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Prefix__c</fullName>
        <label>Name Prefix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Suffix__c</fullName>
        <label>Name Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustBasename__c</fullName>
        <label>CustBaseName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>